===========
PyObjC NEWS
===========

An overview of the relevant changes in new, and older, releases.

Version 2.1 (...)
-----------------


- PyObjC can now run in 64-bit mode.

  NOTE: 64-bit support is beta quality, that is: all unittests pass, but I 
  haven't tried running real programs yet and hence there might be issues 
  lurking below the surface.

  NOTE2: PPC64 support is completely untested, aka "it compiles and therefore 
  must work".

  This requires Leopard (OSX 10.5), earlier version of the OS don't have a 
  64-bit Objective-C runtime at all.  This currently also requires a copy of 
  python that was build with ``MACOSX_DEPLOYMENT_TARGET=10.5``.

  Note that class posing (the ``poseAsClass_`` class method) is not supported 
  in 64-bit mode. It is also not possible to create new protocols in 64-bit 
  code. Neither are supported by the 64-bit runtime APIs (that is, it is a 
  restriction in Apple's Objective-C 2.0 runtime).


Version 2.0.1 (...)
-------------------

- BUGFIX: ``objc.inject`` works on Leopard (at least on Intel Macs, haven't
  tested on PPC). 

- BUGFIX: don't crash when printing CF objects that are magic cookies.

- BUGFIX: It is now possible to override ``respondsToSelector:`` in Python.

- BUGFIX: The wrappers for CoreFoundation types no longer create a new type 
  in the Objective-C runtime, that type wasn't used anywhere and was an 
  unwanted side-effect of how CoreFoundation types are wrapped.


- Add support for interacting with '@synchronized' blocks in Objective-C.

  The function ``object_lock(object)`` is a contextmanager that acquires and
  releases the '@synchronized' mutex for an object, and can also be used
  manually.

  That is (as context manager)::
  	from __future__ import with_statement

	obj = NSObject.new()

	with objc.object_lock(obj):
	    # Perform work while owning the @synchronize lock
	    pass

   or (manually)::

   	obj = NSObject.new()
	mutex = objc.object_lock(obj)
	mutex.lock()
	try: